# DisagMoE

./: .gitignore  .gitmodules  Makefile  readme.md  requirements.txt  run.sh  setup.py
benchmark/: benchmark_e2e.sh  benchmark_pack_attn_meta.py  benchmark_poisson.sh  benchmark_preprocess.py  benchmark_scale.py  benchmark_serving.py  launch_server.sh  local_comm_latency.py  readme.md  remote_comm_latency_recver.py  remote_comm_latency_sender.py  server.py  utils.py  workload.py
benchmark/broadcast/: bc.py
benchmark/ops/: expert.py  grouped_experts.py  grouped_experts_gemm.py  run.sh
benchmark/plotter/: draw_plots.sh  execution_batch_size.py  latency_throughput.py  namer.py  output_req.py  plot_scale.py  plot_trace.sh  queue_length.py  queue_length_interact.py  queueing_delay.py  sampler_step.py  ttft.py
benchmark/remote_comm_latency/: recver.py  sender.py
benchmark/scripts/: benchmark_e2e.sh  benchmark_instructions.sh  benchmark_layer_scheduler.sh  benchmark_placement_search.sh  benchmark_poisson.sh  benchmark_rate.sh  benchmark_serving.sh  benchsuite.py  large_rate.sh  launch_server.sh  various_rate.sh
csrc/: CMakeLists.txt  bindings.cpp
csrc/cuda_ops/: permute.cu  test.cu
csrc/engine/: block_manager.cpp  engine.cpp  scheduler.cpp
csrc/include/: binding_helper.h  binding_tests.hpp  block_manager.h  comm.h  constants.h  cuda_utils.h  datatypes.hpp  distributed.hpp  embedding.h  engine.h  logging.h  muhelper.h  permute.h  profiler.hpp  scheduler.h  tests.h  utils.hpp
csrc/includes/: binding_tests.hpp  comm.h  cuda_utils.h  datatypes.hpp  embedding.h  engine.h  logging.h  muhelper.h  permute.h  scheduler.h  utils.hpp
csrc/muhelper/: comm.cpp  embedding.cpp  muhelper.cpp
csrc/tests/: test_bcast_overlap.cpp  test_op_overlap.cpp  test_zmq_overlap.cpp
disagmoe/: config.py  env.py
disagmoe/csrc/: bindings.cpp
disagmoe/executor/: attn_metadata.py  executor.py
disagmoe/frontend/: adapter.py  controller.py  datatypes.py  engine.py  ray_helper.py
disagmoe/models/: attention.py  distributed.py  experts.py  linear.py  utils.py
disagmoe/ops/: memory.py
disagmoe/scheduler/: __init__.py  dpscheduler.py
disagmoe/utils/: constants.py  logger.py  metrics.py  placement.py  utils.py
scripts/gcp/: client.sh  client_start_ray.sh  client_update.sh
tests/: comm_latency.py  test_attention.py  test_attn_engine.py  test_channel.py  test_colocate.py  test_controller.py  test_dispatcher.py  test_e2e.py  test_ep.py  test_executor.py  test_multi_device.py  test_multi_layer.py  test_sampler.py
tests/cg/: test_attn.py  test_expert.py
tests/comm/: test_multi_launch.py  (+1 more)
(+42 files in other folders)
